add in all the main pages and minor edit to stylesheet

--- a/index.html
+++ b/index.html
@@ -1,3 +1,58 @@
-<html>
-  <p> hello </p>
+<!DOCTYPE html>
+<html lang='en'>
+  <head>
+    <meta charset='UTF-8'/>
+    <title>Homepage</title>
+    <link rel="stylesheet" href="https://use.typekit.net/ace2gwi.css">
+    <link rel='stylesheet' href='public/static/annastyles2.css'/>
+  </head>
+  <body>
+    <div class='page-container'>
+      <div class='header-container'>
+        <div class='header'>
+          <div class='project-title'>Superfund Search</div>
+          <div class='about'>
+            <a class='home-about' href='home-about.html'>About this project</a>
+          </div>
+        </div>
+      </div>
+      <div class='menu-container'>
+        <ul class='menu'>
+          <li><a class='menu-option home-info current special-link' href='index.html'>Intro to superfund sites</a></li>
+          <li><a class='menu-option home-search special-link' href='home-search.html'>Find a site near you</a></li>
+        </ul>
+      </div>
+      <div class='general-block'>
+        <div class='heading-big extra-space'>What is a superfund site?</div>
+        <div class='paragraph-info'>
+          <p>This will be a paragraph with important context and any other info we want. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet consectetur. Vivamus eget elementum ligula, vitae pharetra quam. Nullam at ligula sed metu. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet consectetur. </p>
+        </div>
+      </div>
+      <div class='general-block'>
+        <div class='heading-big extra-space'>Progress statistics</div>
+        <div class='stats-grid'>
+          <div class='stat'>Stat #1</div>
+          <div class='stat'>Stat #2</div>
+          <div class='stat'>Stat #3</div>
+          <div class='stat'>Stat #4</div>
+        </div>
+      </div>
+      <div class='general-block'>
+        <div class='heading-big extra-space'>A note about methodology</div>
+        <div class='paragraph-info'>
+          <p>All data used for this project is from the <a href="https://www.epa.gov/superfund">EPA's
+            Superfund Program</a>. Data was scraped from the EPA website on May 23rd, 2021 and at the time
+            of publishing this website, May IDK, 2021, total number of days on list calculation is up to date
+            and all other info is from the 23rd scrape. While the milestone timeline visualization on each
+            site page displays each milestone as-is from EPA data, in the caluclations done for the stats
+            and graphs, any milestone that was out of chronological order was dropped. This did not have a
+            large effect on overall themes or calculations. See the <a href='home-about.html'>about page</a>
+            for more information about this website.</p>
+        </div>
+      </div>
+    </div>
+    <div class='footer-container'>
+      <div class='authors'>website made by Anna Greene, Cade Caneddy, and Katherine Moldow</div>
+    </div>
+  </body>
 </html>
