--- a/home-about.html
+++ b/home-about.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'/>
     <title>Homepage</title>
     <link rel="stylesheet" href="https://use.typekit.net/ace2gwi.css">
-    <link rel='stylesheet' href='styles.css'/>
+    <link rel='stylesheet' href='public/static/annastyles2.css'/>
   </head>
   <body>
     <div class='page-container'>
