another link fix

--- a/home-about.html
+++ b/home-about.html
@@ -12,7 +12,7 @@
         <div class='header'>
           <div class='project-title'>Superfund Search</div>
           <div class='about'>
-            <a class='home-about' href='home-info.html'>Back to home</a>
+            <a class='home-about' href='index.html'>Back to home</a>
           </div>
         </div>
       </div>
