--- a/public/home-info.html
+++ b/public/home-info.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>HTML Meta Tag</title>
-      <meta http-equiv = "refresh" content = "0; url = https://superfundsearch.github.io/home-search.html" />
+      <meta http-equiv = "refresh" content = "0; url = superfundsearch.github.io/home-search.html" >
    </head>
    <body>
       <p>Redirecting to another URL</p>
