tweaks to home page

--- a/index.html
+++ b/index.html
@@ -25,16 +25,22 @@
       <div class='general-block'>
         <div class='heading-big extra-space'>What is a superfund site?</div>
         <div class='paragraph-info'>
-          <p>This will be a paragraph with important context and any other info we want. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet consectetur. Vivamus eget elementum ligula, vitae pharetra quam. Nullam at ligula sed metu. Lorem ipsum dolor sit amet, consec tetur adipiscing elit. Nam condimentum tempus diam, ultricies sollicitudin erat facilisis eget. Vestibulum rhoncus dui vel eros laoreet consectetur. </p>
+          <p>
+            A Superfund Site is a designated piece of land that the Environmental Protection Agency has declared a danger due to hazardous waste or other hazardous materials embedded in the soil and ecosystem. In 1980, the Comprehensive Environmental Response, Compensation and Liability Act was amended which gave the rights to the EPA to oversee the cleanup of sites across the United States. The EPA was tasked with the responsibility of conducting cleanup actions to protect community and environmental health. Either the party responsible for the damage (such as a chemical company) or the EPA are tasked with cleaning up the site; in either case, the clean-up process is a long and complicated one. Through a novel analysis of data on the EPA website, we have found that it takes an average of 5744 days for a single site to reach ‘completion’, indicating it no longer a hazardous to health or environment. For sites that haven’t reached completion, progress has been ongoing for an average of 11,271 days -- almost double the amount of time taken on completedsites; in short, when progress stalls, it stalls hard.  Through this project we are hoping to allow journalists and concerned citizens alike to easily identify sites that are stalling, investigate why, and hold responsible parties accountable.
+          </p>
         </div>
       </div>
       <div class='general-block'>
-        <div class='heading-big extra-space'>Progress statistics</div>
-        <div class='stats-grid'>
-          <div class='stat'>Stat #1</div>
-          <div class='stat'>Stat #2</div>
-          <div class='stat'>Stat #3</div>
-          <div class='stat'>Stat #4</div>
+        <div class='heading-big extra-space'>Overview statistics</div>
+        <div class='overview-stats background'>
+          <ul>
+            <li class='stat'>Completed sites spend on average of ~5,744 days or over 15 years on the National Priorities List</li>
+            <li class='stat'>Sites whose clean up process is still ongoing spend on average ~11,271 days or over 30 years on the National Priorities List</li>
+            <li class='stat'>Of completed sites and in states with more than 5 sites, Kansas is the fastest state with an averge list time of ~2,772 days or almost 8 years and Maryland is the slowest state with an average list time of ~11,006 days or about 30 years</li>
+            <li class='stat'>Of ongoing sites and in states with more than 5 sites, Mississippi is the fastest state with an average list time of ~3,873 days or over 10 years and Idaho is the slowest state with an average list time of ~</li>
+            <li class='stat'>The milestone that takes sites the longest to fufill is 'Deleted From National Prioities List,' which follows the 'Construction Completed' milestone and takes on average ~5,391 days or almost 15 years to reach</li>
+            <li class='stat'>The milestone that takes sites the fastest to fufill is 'Proposed to the National Priorities List,' which follows the 'Initial Assessment Completed' milestone and takes on average ~453 or a little over 1 year to reach</li>
+          </ul>
         </div>
       </div>
       <div class='general-block'>
