--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <li class='stat'>Completed sites spend on average of ~5,744 days or over 15 years on the National Priorities List</li>
             <li class='stat'>Sites whose clean up process is still ongoing spend on average ~11,271 days or over 30 years on the National Priorities List</li>
             <li class='stat'>Of completed sites and in states with more than 5 sites, Kansas is the fastest state with an averge list time of ~2,772 days or almost 8 years and Maryland is the slowest state with an average list time of ~11,006 days or about 30 years</li>
-            <li class='stat'>Of ongoing sites and in states with more than 5 sites, Mississippi is the fastest state with an average list time of ~3,873 days or over 10 years and Idaho is the slowest state with an average list time of ~</li>
+            <li class='stat'>Of ongoing sites and in states with more than 5 sites, Mississippi is the fastest state with an average list time of ~3,873 days or over 10 years and Idaho is the slowest state with an average list time of ~22,618 days or almost 62 years</li>
             <li class='stat'>The milestone that takes sites the longest to fufill is 'Deleted From National Prioities List,' which follows the 'Construction Completed' milestone and takes on average ~5,391 days or almost 15 years to reach</li>
             <li class='stat'>The milestone that takes sites the fastest to fufill is 'Proposed to the National Priorities List,' which follows the 'Initial Assessment Completed' milestone and takes on average ~453 or a little over 1 year to reach</li>
           </ul>
