--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         <div class='paragraph-info'>
           <p>All data used for this project is from the <a href="https://www.epa.gov/superfund">EPA's
             Superfund Program</a>. Data was scraped from the EPA website on May 23rd, 2021 and at the time
-            of publishing this website, May IDK, 2021, total number of days on list calculation is up to date
-            and all other info is from the 23rd scrape. While the milestone timeline visualization on each
+            of publishing this website, June 3rd, 2021, the total number of days on list calculation is up to date
+            and all other info is from the scrape on the 23rd. While the milestone timeline visualization on each
             site page displays each milestone as-is from EPA data, in the caluclations done for the stats
             and graphs, any milestone that was out of chronological order was dropped. This did not have a
             large effect on overall themes or calculations. See the <a href='home-about.html'>about page</a>
-            for more information about this website.</p>
+            for more information about this project.</p>
         </div>
       </div>
     </div>
